--- a/css/styles.css
+++ b/css/styles.css
@@ -162,11 +162,16 @@ header a, a:visited {
     top: 2px;
     width: 10px;
     z-index: 2;
+    background: url("../images/spr.png") no-repeat scroll -201px -188px rgba(0, 0, 0, 0);
+    height: 13px;
+    width: 13px;
+    outline: none;
 }
 .volume .ui-slider-handle {
     background: url("../images/spr.png") no-repeat scroll -201px -188px rgba(0, 0, 0, 0);
     height: 13px;
     width: 13px;
+    outline: none;
 }
 .playlist {
     background-color: #333333;
@@ -188,4 +193,13 @@ header a, a:visited {
 .playlist li.active {
     font-weight: bold;
     background: #40777763;
+}
+body > div.example > div > div.tracker.ui-slider.ui-corner-all.ui-slider-horizontal.ui-widget.ui-widget-content{
+    cursor:pointer;
+}
+.highlight {
+    color: rgb(10, 185, 4); /* or any color you prefer */
+}
+.bb{
+    color: #98f; /* or any color you prefer */
 }
